14136
Java framework's usage of getter/setter methods is pervasive -- there should be a convenient way to use existing classes with Scala-style property syntax.
```scala
public class JavaBean {
  private String s;
  public void setS(String s) { this.s = s; }
  public String getS()       { return s; }
  
  private int i;
  public void setI(int i) { this.i = i; }
  public int getI()       { return i; }
  
  private boolean b;
  public void setB(boolean b) { this.b = b; }
  public boolean isB()        { return b; }
}
```
```scala
scala> val jb = new JavaBean
jb: JavaBean = JavaBean@4a2dd4
scala> jb.setS("Hallo")
scala> jb.getS
res4: java.lang.String = Hallo
```
A similar class in Scala:
```scala
class ScalaBean {
 var s:String = ""
 var i:Int = 0
 var b:Boolean = false
}
```
```scala
scala> val sb = new ScalaBean
sb: ScalaBean = ScalaBean@94a28e
scala> sb.s = "Hallo"
scala> sb.s
res6: String = Hallo
```
Now if one wants to have !JavaBean-style properties for !ScalaBean one can annotate the fields with @!BeanProperty:
```scala
import scala.reflect.BeanProperty
class ScalaBean {
 @BeanProperty var s:String = ""
 @BeanProperty var i:Int = 0
 @BeanProperty var b:Boolean = false
}
```
```scala
scala> val sb = new ScalaBean
sb: ScalaBean = ScalaBean@1bedb0
scala> sb.s = "Hallo"
scala> sb.getS
res1: String = Hallo
scala> sb.setS("Hi")
scala> sb.s
res3: String = Hi
```
What I would like to have is an easy way to also have it the other way around:
```scala
scala> val jb = new JavaBean
jb: JavaBean = JavaBean@a083f2
scala> jb.s = "Hallo"
scala> jb.getS
res1: String = Hallo
scala> jb.setS("Hi")
scala> jb.s
res3: String = Hi
```

Instead of the following error messages:
```scala
scala> val jb = new JavaBean
jb: JavaBean = JavaBean@a083f2
scala> jb.s = "Hallo"
<console>:5: error: value s is not a member of JavaBean
       jb.s = "Hallo"
          ^
scala> jb.s
<console>:6: error: value s is not a member of JavaBean
       jb.s
          ^
```



It should translate setFoo, getFoo, and isFoo to Scala-style properties.
